# Resume-Tailor

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT_SUMMARY.md  DEPLOY_GUIDE.md  DOCKER_GUIDE.md  Dockerfile  LICENSE  PRODUCTION_CHECKLIST.md  README.md  docker-compose.yml  pyproject.toml  rebuild.sh  render.yaml  requirements.txt  setup.py
src/: config.py  main.py
src/api/: __init__.py  app.py  exceptions.py  server.py
src/api/models/: __init__.py  config.py  errors.py  request.py  response.py  shared.py
src/config/: __init__.py  production.py
src/resume_tailor/: __init__.py  tailor.py
src/services/: __init__.py  base.py  resume_service.py
src/utils/: __init__.py  api_config.py  env_loader.py  env_monitor.py  errors.py  file_handler.py  logger.py
tests/: test_api.py
